Mateus - Refatorado layout

--- a/src/main/webapp/pages/projeto/projeto-listar.xhtml
+++ b/src/main/webapp/pages/projeto/projeto-listar.xhtml
@@ -18,6 +18,8 @@
 		<br />
 			<p:button styleClass="btn-default" value="#{message['button.novo']}"
 				outcome="pretty:projeto-incluir" />
+			<p:button styleClass="btn-alocacao" value="#{message['title.alocacao']}"
+				outcome="pretty:alocacao" />
 
 			<h:form>
 				<p:dataTable id="gridProjeto" var="projeto"
