Mateus - Ajustado layout

--- a/src/main/webapp/pages/relatorio/relatorio-perfil-equipe.xhtml
+++ b/src/main/webapp/pages/relatorio/relatorio-perfil-equipe.xhtml
@@ -27,7 +27,7 @@
 						  <p:ajax immediate="true" update="gridGrafico" event="change" process="@this"/>
 			</p:selectOneMenu>
 			
-		<p:chart id="gridGrafico" type="bar" model="#{relatorioManager.perfilPorEquipe}" style="height:300px" responsive="true">
+		<p:chart id="gridGrafico" type="bar" model="#{relatorioManager.perfilPorEquipe}" style="height:400px" responsive="true"  extender="decimalConverter">
 			<p:ajax event="itemSelect" listener="#{relatorioManager.itemSelectPerfilPorEquipe}" process="@this" update="gridRelatorio celula"/>
 		</p:chart>
 	</h:form>
