--- a/src/main/webapp/pages/relatorio/relatorio-contratacao-celula.xhtml
+++ b/src/main/webapp/pages/relatorio/relatorio-contratacao-celula.xhtml
@@ -18,7 +18,7 @@
 		
 		
 		<p:selectOneMenu styleClass="dropdown-pesquisa" id="celula"
-						 value="#{relatorioManager.celula}" onchange="submit()" valueChangeListener="#{relatorioManager.stateChangeListenerContratcaoPorCelula}"
+						 value="#{relatorioManager.celula}"  valueChangeListener="#{relatorioManager.stateChangeListenerContratcaoPorCelula}"
 						converter="simpleEntityConverter" >
 						<f:selectItem itemLabel="#{message['select.celula']}"
 							noSelectionOption="true" />
