--- a/src/main/webapp/pages/relatorio/relatorio-perfil-equipe.xhtml
+++ b/src/main/webapp/pages/relatorio/relatorio-perfil-equipe.xhtml
@@ -17,14 +17,14 @@
 		<h2>#{message['title.relatorio.perfil.equipe']}</h2>
 		
 			<p:selectOneMenu styleClass="dropdown-pesquisa" id="celula"
-						 value="#{relatorioManager.celula}" onchange="submit()" valueChangeListener="#{relatorioManager.stateChangeListenerPerfilPorEquipe}"
+						 value="#{relatorioManager.celula}" valueChangeListener="#{relatorioManager.stateChangeListenerPerfilPorEquipe}"
 						converter="simpleEntityConverter" >
 						<f:selectItem itemLabel="#{message['select.celula']}"
 							noSelectionOption="true" />
 						<f:selectItems value="#{celulaManager.listarAtivos()}"
 							var="celula" itemLabel="#{celula.nome}" itemValue="#{celula}" />
 							
-						  <p:ajax immediate="true" update="gridGrafico" event="change" process="@this"/>
+						  <p:ajax  update="gridGrafico" event="change" process="@this"/>
 			</p:selectOneMenu>
 			
 		<p:chart id="gridGrafico" type="bar" model="#{relatorioManager.perfilPorEquipe}" style="height:400px" responsive="true"  extender="decimalConverter">
