--- a/src/main/webapp/pages/alocacao/alocacao-listar.xhtml
+++ b/src/main/webapp/pages/alocacao/alocacao-listar.xhtml
@@ -175,7 +175,7 @@
 							</p:column>
 							
 							<p:column headerText="Açoes">
-								<p:commandButton action="#{alocacaoManager.desativar(recurso.id)}" value="desativar" ></p:commandButton>
+								<p:commandButton action="#{alocacaoManager.desativar(recurso.profissional.matricula)}" value="desativar"  update="gridRecursosDoProjeto"  ></p:commandButton>
 							</p:column>
 							
 							</p:dataTable>
