Mateus - Ajustado layout Alocacao, falta border da grid

--- a/src/main/webapp/pages/home/index.xhtml
+++ b/src/main/webapp/pages/home/index.xhtml
@@ -21,7 +21,7 @@
         	</div> 
         </h:link>
         
-        <h:link outcome="pretty:projeto">
+        <h:link outcome="pretty:alocacao">
    	   		<div id="projeto" class="painel projeto">        	
         		<div class="text-painel">
         			Projetos
