--- a/src/main/webapp/pages/projeto/projeto-incluir.xhtml
+++ b/src/main/webapp/pages/projeto/projeto-incluir.xhtml
@@ -11,8 +11,8 @@
 		<div class="incluir-editar">
 			<p:breadCrumb>
 				<p:menuitem value="#{message['pao.home']}" url="#" />
-				<p:menuitem value="#{message['pao.projeto']}"
-					outcome="pretty:projeto" />
+				<p:menuitem value="#{message['pao.alocacao']}"
+					outcome="pretty:alocacao" />
 				<p:menuitem value="#{message['pao.projeto.incluir']}"
 					outcome="pretty:projeto-incluir" disabled="true" />
 			</p:breadCrumb>
@@ -61,7 +61,7 @@
 					<p:commandButton value="#{message['button.salvar']}"
 						action="#{projetoManager.save()}" update="growl" styleClass="btn" />
 					<p:button value="#{message['button.cancelar']}"
-						outcome="pretty:projeto" styleClass="btn" />
+						outcome="pretty:alocacao" styleClass="btn" />
 				</p:panel>
 			</h:form>
 		</div>
