--- a/src/main/webapp/pages/alocacao/alocacao-listar.xhtml
+++ b/src/main/webapp/pages/alocacao/alocacao-listar.xhtml
@@ -65,7 +65,7 @@
 							<h:outputText value="#{recurso.profissional.nome}" id="recursoNome"/>
 						</p:column>
 						
-						<p:column headerText="#{message['label.profissional.cargo']}" for="recursoCargo">
+						<p:column headerText="#{message['label.profissional.cargo']}" for="recursoCargo" styleClass="tableCargo">
 							<h:outputText value="#{recurso.profissional.cargo.nome}" id="recursoCargo" />
 						</p:column>
 					
